--- a/elements/crew-team-manager-compare/crew-team-manager-compare-detail-results.html
+++ b/elements/crew-team-manager-compare/crew-team-manager-compare-detail-results.html
@@ -14,7 +14,8 @@
                 @apply(--layout-horizontal);
             }
 
-            #content {
+            #content-one,
+            #content-two {
                 background-color: lightslategray;
                 @apply(--layout-vertical);
                 @apply(--layout-flex);
@@ -64,23 +65,23 @@
             }
         </style>
 
-        <div id="content">
+        <div id="content-one">
 
             <paper-card id="athlete">
-                <crew-team-manager-avatar id="athlete-avatar" value="[[data.firstName]]" large></crew-team-manager-avatar>
+                <crew-team-manager-avatar id="athlete-avatar" value="[[dataOne.firstName]]" large></crew-team-manager-avatar>
                 <div id="athlete-name">
-                    [[data.firstName]] [[data.lastName]]
-                    <div id="athlete-year">([[data.year]]) </div>
+                    [[dataOne.firstName]] [[dataOne.lastName]]
+                    <div id="athlete-year">([[dataOne.year]]) </div>
                 </div>
                 <div id="athlete-contact">
                     <div id="subhead">
                         Contact information:
                     </div>
                     <div id="location">
-                        [[data.streetAddress]], [[data.city]], [[data.state]]
+                        [[dataOne.streetAddress]], [[dataOne.city]], [[dataOne.state]]
                     </div>
                     <div id="phone">
-                        Phone number: [[data.phone]]
+                        Phone number: [[dataOne.phone]]
                     </div>
                 </div>
                 <div id="athlete-basic">
@@ -91,17 +92,17 @@
                         Team: [[team.teamName]]
                     </div>
                     <div id="height">
-                        Height: [[data.height]]
+                        Height: [[dataOne.height]]
                     </div>
                     <div id="weight">
-                        Weight: [[data.weight]]
+                        Weight: [[dataOne.weight]]
                     </div>
                     <div id="gender">
-                        Gender: [[data.gender]]
+                        Gender: [[dataOne.gender]]
                     </div>
 
                     <div id="driver">
-                        Can drive? [[data.driver]]
+                        Can drive? [[dataOne.driver]]
                     </div>
                 </div>
                 <div id="athlete-row">
@@ -109,13 +110,71 @@
                         Stats:
                     </div>
                     <div id="2k">
-                        2k time: [[data.ergScore]]
+                        2k time: [[dataOne.ergScore]]
                     </div>
                     <div id="side">
-                        Rowing Side: [[data.side]]
+                        Rowing Side: [[dataOne.side]]
                     </div>
                     <div id="funds">
-                        Fundraising: [[data.fundRaising]]
+                        Fundraising: [[dataOne.fundRaising]]
+                    </div>
+                </div>
+
+            </paper-card>
+        </div>
+
+        <div id="content-two">
+
+            <paper-card id="athlete">
+                <crew-team-manager-avatar id="athlete-avatar" value="[[dataTwo.firstName]]" large></crew-team-manager-avatar>
+                <div id="athlete-name">
+                    [[dataTwo.firstName]] [[dataTwo.lastName]]
+                    <div id="athlete-year">([[dataTwo.year]]) </div>
+                </div>
+                <div id="athlete-contact">
+                    <div id="subhead">
+                        Contact information:
+                    </div>
+                    <div id="location">
+                        [[dataTwo.streetAddress]], [[dataTwo.city]], [[dataTwo.state]]
+                    </div>
+                    <div id="phone">
+                        Phone number: [[dataTwo.phone]]
+                    </div>
+                </div>
+                <div id="athlete-basic">
+                    <div id="subhead">
+                        Basic inforomation:
+                    </div>
+                    <div id="team">
+                        Team: [[team.teamName]]
+                    </div>
+                    <div id="height">
+                        Height: [[dataTwo.height]]
+                    </div>
+                    <div id="weight">
+                        Weight: [[dataTwo.weight]]
+                    </div>
+                    <div id="gender">
+                        Gender: [[dataTwo.gender]]
+                    </div>
+
+                    <div id="driver">
+                        Can drive? [[dataTwo.driver]]
+                    </div>
+                </div>
+                <div id="athlete-row">
+                    <div id="subhead">
+                        Stats:
+                    </div>
+                    <div id="2k">
+                        2k time: [[dataTwo.ergScore]]
+                    </div>
+                    <div id="side">
+                        Rowing Side: [[dataTwo.side]]
+                    </div>
+                    <div id="funds">
+                        Fundraising: [[dataTwo.fundRaising]]
                     </div>
                 </div>
 
@@ -133,13 +192,17 @@
 
             static get observer() {
                 return [
-                    '_dataChanged(data)'
+                    '_dataChanged(dataOne, dataTwo)'
                 ]
             }
 
             static get properties() {
                 return {
-                    data: {
+                    dataOne: {
+                        type: Object,
+                    },
+
+                    dataTwo: {
                         type: Object,
                     },
 
@@ -149,13 +212,14 @@
                 }
             }
 
-            _dataChanged(data) {
-                if (data == null) {
+            _dataChanged(data1, data2) {
+                console.log(data1, data2)
+                if (data1 == null || data2 == null) {
                     //TODO make a deleted toast pop up and ask if 
                     //the user wants to go back to the list page
                 }
 
-                if (data != null) {
+                if (data1 != null || data2 != null) {
                     //TODO make an updated toast pop up and ask if 
                     //the user wants to go refresh to the page
                 }
