--- a/elements/crew-team-manager-compare/crew-team-manager-compare-detail.html
+++ b/elements/crew-team-manager-compare/crew-team-manager-compare-detail.html
@@ -14,12 +14,10 @@
 
 <link rel="import" href="../../bower_components/polymerfire/polymerfire.html">
 
-<link rel="import" href="crew-team-manager-compare-detail-loading.html">
-<link rel="import" href="crew-team-manager-compare-detail-results.html">
-<link rel="import" href="crew-team-manager-compare-detail-message.html">
-
-
 <dom-module id="crew-team-manager-compare-detail">
+    <link rel="lazy-import" group="loading" href="crew-team-manager-compare-detail-loading.html">
+    <link rel="lazy-import" group="results" href="crew-team-manager-compare-detail-results.html">
+    <link rel="lazy-import" group="message" href="crew-team-manager-compare-detail-message.html">
     <template>
         <style>
              :host {
@@ -37,31 +35,27 @@
                 @apply(--layout-flex);
             }
 
-            #loading {
-                @apply(--layout-flex);
-            }
-
             #layout {
                 @apply(--layout-flex);
             }
 
-            #results {
-                @apply(--layout-flex);
-            }
-
+            #results,
+            #loading,
             #message {
                 @apply(--layout-flex);
             }
 
             #toolbar {
-                background-color: #2e7d32;
+                background-color: #164410;
                 color: #fff;
             }
         </style>
 
-        <firebase-document id="firebase" app-name="laborsync-ctm" path="/athletes/{{athlete}}" data="{{_data}}">
+        <firebase-document id="firebase" app-name="laborsync-ctm" path="/athletes/{{athleteOne}}" data="{{_dataAthleteOne}}">
         </firebase-document>
-        <firebase-document id="firebase-team" app-name="laborsync-ctm" path="/teams/{{_data.team}}" data="{{_team}}">
+        <firebase-document id="firebase" app-name="laborsync-ctm" path="/athletes/{{athleteTwo}}" data="{{_dataAthleteTwo}}">
+        </firebase-document>
+        <firebase-document id="firebase-team" app-name="laborsync-ctm" path="/teams/{{_dataAthleteOne.team}}" data="{{_team}}">
         </firebase-document>
 
 
@@ -71,13 +65,11 @@
                 <app-toolbar id="toolbar">
                     <paper-icon-button id="back" icon="arrow-back" on-click="_handleActionBack"></paper-icon-button>
                     <div main-title id="title">Details</div>
-                    <paper-icon-button id="edit" icon="create" on-click="_handleActionEdit"></paper-icon-button>
-                    <paper-icon-button id="delete" icon="delete" on-click="_handleActionDelete"></paper-icon-button>
                 </app-toolbar>
             </app-header>
-            <iron-pages id="pages" attr-for-selected="id" selected="[[_page]]">
+            <iron-pages id="pages" attr-for-selected="id" selected="[[page]]">
                 <crew-team-manager-compare-detail-loading id="loading"></crew-team-manager-compare-detail-loading>
-                <crew-team-manager-compare-detail-results id="results" data="{{_data}}" team="{{_team}}"></crew-team-manager-compare-detail-results>
+                <crew-team-manager-compare-detail-results id="results" data-one="{{_dataAthleteOne}}" data-two="{{_dataAthleteTwo}}" team="{{_team}}"></crew-team-manager-compare-detail-results>
                 <crew-team-manager-compare-detail-message id="message"></crew-team-manager-compare-detail-message>
             </iron-pages>
 
@@ -89,7 +81,7 @@
 
     <script>
         // Extend Polymer.Element with MyMixin
-        class crewTeamManagerCompareDetail extends Polymer.Element {
+        class crewTeamManagerCompareDetail extends Polymer.LazyImportsMixin(Polymer.Element) {
 
             static get is() {
                 return 'crew-team-manager-compare-detail'
@@ -97,19 +89,25 @@
 
             static get observers() {
                 return [
-                    '_updatePage(athlete)'
+                    '_updateAthletes(athletes)',
+                    '_updatePage(athleteOne, athleteTwo)',
+                    '_changePage(page)'
                 ]
 
             }
 
             static get properties() {
                 return {
-                    _page: {
-                        type: String,
-                        value: 'loading'
+                    page: {
+                        type: String
                     },
 
-                    _data: {
+                    _dataAthleteOne: {
+                        type: Object,
+                        value: {}
+                    },
+
+                    _dataAthleteTwo: {
                         type: Object,
                         value: {}
                     },
@@ -119,48 +117,45 @@
                         value: {}
                     },
 
-                    athlete: {
+                    athletes: {
+                        type: Object
+                    },
+
+                    athleteOne: {
                         type: String,
                         value: ''
                     },
 
+                    athleteTwo: {
+                        type: String,
+                        value: ''
+                    }
+
                 }
             }
 
-            _updatePage(athlete) {
-                let page = 'message';
+            _updateAthletes(athletes) {
+                this.athleteOne = athletes.athlete1;
+                this.athleteTwo = athletes.athlete2;
+            }
 
-                if (athlete) {
+            _changePage(page) {
+                this.importLazyGroup(page).then(function () {}.bind(this));
+            }
+
+            _updatePage(athlete1, athlete2) {
+                let page = 'message';
+                if (athlete1 && athlete2) {
                     page = 'results';
 
                 }
-
-                this._page = page;
+                this.page = page;
             }
 
 
 
             _handleActionBack(e) {
                 this.dispatchEvent(new CustomEvent(crewTeamManagerCompareDetail.is + '-action-back', {
-                    bubbles: true,
-                    composed: true
-                }));
-            }
-
-            _handleActionEdit(e) {
-                this.dispatchEvent(new CustomEvent(crewTeamManagerCompareDetail.is + '-action-edit', {
-                    bubbles: true,
-                    composed: true,
-                    detail: {
-                        athlete: JSON.parse(JSON.stringify(this._data))
-                    }
-                }));
-
-            }
-
-            _handleActionDelete(e) {
-                this.$.firebase.destroy();
-                this.dispatchEvent(new CustomEvent(crewTeamManagerCompareDetail.is + '-action-delete', {
                     bubbles: true,
                     composed: true
                 }));
