--- a/elements/crew-team-manager-compare/crew-team-manager-compare.html
+++ b/elements/crew-team-manager-compare/crew-team-manager-compare.html
@@ -10,13 +10,11 @@
 
 <link rel="import" href="../../bower_components/polymerfire/polymerfire.html">
 
-<link rel="import" href="crew-team-manager-compare-list.html">
-<link rel="import" href="crew-team-manager-compare-detail.html">
-<link rel="import" href="crew-team-manager-compare-edit.html">
-<link rel="import" href="crew-team-manager-compare-create.html">
-
-
 <dom-module id="crew-team-manager-compare">
+    <link rel="lazy-import" group="list" href="crew-team-manager-compare-list.html">
+    <link rel="lazy-import" group="detail" href="crew-team-manager-compare-detail.html">
+    <link rel="lazy-import" group="edit" href="crew-team-manager-compare-edit.html">
+    <link rel="lazy-import" group="create" href="crew-team-manager-compare-create.html">
     <template>
         <style>
              :host {
@@ -29,15 +27,8 @@
                 position: relative;
             }
 
-            #list {
-                @apply(--layout-fit);
-            }
-
+            #list,
             #detail {
-                @apply(--layout-fit);
-            }
-
-            #edit {
                 @apply(--layout-fit);
             }
 
@@ -47,21 +38,13 @@
             }
         </style>
 
-        <iron-pages id="pages" attr-for-selected="id" selected="[[_page]]" selected-attribute="selected">
-            <crew-team-manager-compare-list id="list" menu-hidden$="[[wideLayout]]" on-crew-team-manager-compare-list-results-action-detail="_handleActionDetail"
-                on-crew-team-manager-compare-list-action-create="_handleActionCreate">
+        <iron-pages id="pages" attr-for-selected="id" selected="[[page]]" selected-attribute="selected">
+            <crew-team-manager-compare-list id="list" menu-hidden$="[[wideLayout]]" page="loading" team-id="{{teamId}}" on-crew-team-manager-compare-list-results-action-detail="_handleActionDetail">
             </crew-team-manager-compare-list>
 
-            <crew-team-manager-compare-detail id="detail" athlete="[[_athlete]]" on-crew-team-manager-compare-detail-action-back="_handleActionBack"
+            <crew-team-manager-compare-detail id="detail" athletes="[[_athletes]]" page="loading" team-id="{{teamId}}" on-crew-team-manager-compare-detail-action-back="_handleActionBack"
                 on-crew-team-manager-compare-detail-action-edit="_handleActionEdit" on-crew-team-manager-compare-detail-action-delete="_handleActionDelete">
             </crew-team-manager-compare-detail>
-
-            <crew-team-manager-compare-edit edit="[[_edit]]" id="edit" athlete="[[_athlete]]" on-crew-team-manager-compare-edit-action-back="_handleActionBackOnce"
-                on-crew-team-manager-compare-edit-action-saved="_handleActionSaved">
-            </crew-team-manager-compare-edit>
-
-            <crew-team-manager-compare-create id="create" on-crew-team-manager-compare-create-action-cancel="_handleActionCancel" on-crew-team-manager-compare-create-action-created="_handleActionCreated">
-                </crew-team-manager-creater-edit>
         </iron-pages>
 
         <paper-toast id="toast" duration="4000">[[_toast]]</paper-toast>
@@ -70,15 +53,21 @@
 
     <script>
         // Extend Polymer.Element with MyMixin
-        class crewTeamManagerCompare extends Polymer.Element {
+        class crewTeamManagerCompare extends Polymer.LazyImportsMixin(Polymer.Element) {
 
             static get is() {
                 return 'crew-team-manager-compare'
             }
 
+            static get observers() {
+                return [
+                    '_changePage(page)'
+                ]
+            }
+
             static get properties() {
                 return {
-                    _page: {
+                    page: {
                         type: String,
                         value: 'list'
                     },
@@ -92,39 +81,46 @@
                         value: false,
                     },
 
-
+                    teamId: String,
 
                     _athletes: {
                         type: Object,
-                        athlete1: '',
-                        athlete2: ''
+                        value: {
+                            athlete1: '',
+                            athlete2: ''
+                        }
                     }
                 }
+            }
+
+            _changePage(page) {
+
+                this.importLazyGroup(page).then(function () {}.bind(this));
             }
 
             _handleActionDetail(e) {
                 this._athletes.athlete1 = e.detail.firstAthlete;
                 this._athletes.athlete2 = e.detail.secondAthlete;
-                this._page = 'detail';
+                this.page = 'detail';
             }
 
             _handleActionBack(e) {
-                this._page = 'list';
+                this.page = 'list';
             }
 
             _handleActionBackOnce(e) {
-                this._page = 'detail';
+                this.page = 'detail';
             }
 
             _handleActionEdit(e) {
 
                 this._edit = e.detail.athlete;
-                this._page = 'edit';
+                this.page = 'edit';
 
             }
 
             _handleActionCreated(e) {
-                this._page = 'detail';
+                this.page = 'detail';
                 this._toast = 'Athlete Created';
                 this._athlete = e.detail.athlete;
                 this.$.toast.fitInto = this.$.pages;
@@ -132,25 +128,25 @@
             }
 
             _handleActionSaved(e) {
-                this._page = 'detail';
+                this.page = 'detail';
                 this._toast = 'Athlete Saved';
                 this.$.toast.fitInto = this.$.pages;
                 this.$.toast.open();
             }
 
             _handleActionCreate(e) {
-                this._page = 'create';
+                this.page = 'create';
             }
 
             _handleActionCancel(e) {
-                this._page = 'list';
+                this.page = 'list';
                 this._toast = 'Cancelled Athlete Create';
                 this.$.toast.fitInto = this.$.pages;
                 this.$.toast.open();
             }
 
             _handleActionDelete(e) {
-                this._page = 'list';
+                this.page = 'list';
                 this._toast = 'Athlete Deleted';
                 this.$.toast.fitInto = this.$.pages;
                 this.$.toast.open();
